[package]
name = "acorusdb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rmp-serde = "1.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
